# dictcompare

./: .gitignore  README.md  pyproject.toml
dictcompare/: __init__.py  api.py  comparer.py
tests/: tests_comparer.py  tests_comparer_api.py
