[tool.poetry]
name = "dictcompare"
version = "0.1.0"
description = ""
authors = ["Filip <filipcondac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = false 
target-version = ['py39', 'py310']
exclude = '''
/(
    \.git
  | \.venv
  | _build
  | build
  | dist
)/
'''